[project]
name = "portia-ai-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Sandeep-singh-99",email = "sandeep.necoder@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "portia-sdk-python[google] (>=0.7.2,<0.8.0)"
]

[tool.poetry]
packages = [{include = "portia_ai_example", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
